Initial commit: Project setup with Ember.js

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@
 
 # broccoli-debug
 /DEBUG/
+
+# IDE specific files
+/.idea/
+/.vscode/
+/*.sublime-project
+/*.sublime-workspace
+
+# OS specific files
+.DS_Store
+Thumbs.db
