--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ember-source": "~6.2.0",
     "ember-template-imports": "^4.3.0",
     "ember-template-lint": "^6.1.0",
+    "ember-truth-helpers": "^4.0.3",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^9.1.0",
@@ -64,10 +65,13 @@
     "eslint-plugin-qunit": "^8.1.2",
     "globals": "^15.14.0",
     "loader.js": "^4.7.0",
+    "mirage": "^0.0.7",
+    "miragejs": "^0.1.48",
     "prettier": "^3.4.2",
     "prettier-plugin-ember-template-tag": "^2.0.4",
     "qunit": "^2.24.1",
     "qunit-dom": "^3.4.0",
+    "sass": "^1.85.1",
     "stylelint": "^16.14.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-prettier": "^5.0.3",
